# adv-saflow

./: CNAME  README.md  contact.html  index.html  plan.html  playbook.html  pricing.html  robots.txt  scrapper.md  services.html  shared.css  shared.js  sitemap.xml
clients/: edearn.html  webspacein.html
scrapper/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
scrapper/alembic/: env.py
scrapper/db/: schema.sql
scrapper/db/seeds/: cities.csv  verticals.csv
scrapper/src/scrapper/: __init__.py  cli.py  config.py  db.py  models.py  queries.py
scrapper/src/scrapper/enrichment/: extractor.py  website.py
scrapper/src/scrapper/exporters/: csv.py
scrapper/src/scrapper/scraper/: maps.py  parsers.py  selectors.py
scrapper/tests/: test_extractor.py
